--- a/index.html
+++ b/index.html
@@ -38,5 +38,23 @@
     // The JavaScript code remains unchanged
     // ...
   </script>
+  <div class="container">
+    <h1>Sign Up</h1>
+    <form>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit">Sign Up</button>
+    </form>
+</div>
 </body>
 </html>
